<resources>
    <string name="app_name">Interac Wallet</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_deals">Deals</string>
    <string name="nav_track">Track Order</string>
    <string name="nav_tables">Tables</string>
    <string name="nav_settings">My Profile</string>
    <string name="cleartable">Clear Table Data</string>
    <string name="loading"></string>
    <string name="sub_menu_image">subMenuImage</string>
    <string name="menu_title">Vegetarian</string>
    <string name="userimage">userimage</string>
    <string name="phonenumber">Phone Number</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="newAddress">New Address</string>
    <string name="myorders">My Orders</string>
    <string name="signOut">Sign Out</string>
    <string name="location">location</string>
    <string name="personalinformation">Personal Information</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="Email">E-Mail</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="addressinformation">Address Information</string>
    <string name="doorno">Door No</string>
    <string name="city">City</string>
    <string name="streetaddress">Street Address</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="signup">Sign-UP</string>
    <string name="country">Country</string>
    <string name="userEmail">Email or Phonenumber</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invoice">Invoice</string>
    <string name="invoice1">Invoice</string>
    <string name="price">Price</string>
    <string name="download">Download</string>
    <string name="address">Address</string>
    <string name="total">Total</string>
    <string name="subtotal">Sub Total</string>
    <string name="gst">GST 5%</string>
    <string name="size">Size</string>
    <string name="star">*</string>
    <string name="add_more">More AddOns</string>
    <string name="default_toppings">Default Items</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="select">Select</string>
    <string name="selecttoppings">More AddOns</string>
    <string name="add_to_pizza">Add to Product</string>
    <string name="check_out">Check Out</string>
    <string name="pst">PST 7%</string>
    <string name="remove">remove</string>
    <string name="delete_all">Delete All</string>
    <string name="description">Description</string>
    <string name="price1">Price</string>
    <string name="total1">Total</string>
    <string name="Quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="price2">Price</string>
    <string name="date1">Date</string>
    <string name="track">Track Order</string>
    <string name="Order_details">Order Number -</string>
    <string name="Order_No">Order No</string>
    <string name="Order_Placed">Order Placed</string>
    <string name="Cooking">Cooking</string>
    <string name="on_the_way">On the way</string>
    <string name="make_line">Make Line</string>
    <string name="readyfordelivery">Ready For Delivery</string>
    <string name="notLoggedIn">You haven\'t logged into account</string>
    <string name="taplogin">Please tap \'Login\' button to login\n into account</string>
    <string name="login">Login</string>
    <string name="notOrdered">You haven\'t ordered Today</string>
    <string name="tapmenu">Please tap \'Menu\' button to Order\n \nYour Favorite Products</string>
    <string name="allorders">All Orders</string>
    <string name="postalcode">Postal Code or Zip Code</string>
    <string name="availability">Availability</string>
    <string name="name">Name</string>
    <string name="phoneno">Phone No</string>
    <string name="save">Save</string>
    <string name="getlocation">Get Location</string>
    <string name="enterOTP">Activate Account with OTP</string>
    <string name="otp">OTP</string>
    <string name="submit">Submit</string>
    <string name="sentOTP">We have sent an OTP to your email-id \n and Phone Number for verification.</string>
    <string name="please_submit">Please submit OTP to verify your Account</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="deals_fire">Deals Fire Icon Image</string>
    <string name="next">Next</string>
    <string name="deliverycharges">Delivery Charges</string>
    <string name="coupondiscount">Coupon Discount</string>
    <string name="paynow">Pay Now</string>
    <string name="paylater">Pay Later</string>
    <string name="paidby">Paid By</string>
    <string name="paymentMode">Payment Mode</string>
    <string name="deliverytype">Service Type</string>
    <string name="entercoupon">Enter Coupon Code</string>
    <string name="sorrynocoupon">Sorry, coupons are not be available if you have deals item in your cart</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="pickup">Pick-UP</string>
    <string name="notaddaddress">You haven\'t added address yet.</string>
    <string name="taponaddress">Please tap on \'Add address\' button to \n add new address</string>
    <string name="addAddress">Add Address</string>
    <string name="storeClosed">Sorry, Currently we are Closed</string>
    <string name="suretodelete">Do you want to Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noOrdersforyou">You have no orders</string>
    <string name="pleaseGotomenu">Please go to Menu to order something</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="currentpassword">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="conform_new_password">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="admin_discount">Admin Discount</string>
    <string name="adminhintvalue">0.0</string>
    <string name="entercustomeremail">Existing customer E-Mail (or) Phone No</string>
    <string name="default_notification_channel_id">ParmPizzaChannel</string>
    <string name="selectEmployee">Select Delivery Person</string>
    <string name="search">Search Printers / CashBox</string>
    <string name="edit_order">Edit Order</string>
    <string name="skip_address">Skip</string>
    <string name="updateOrder">Update Order</string>
    <string name="change">Balance</string>
    <string name="receivedamount">Received Amount</string>
    <string name="updatefreeaddress">Set Free Delivery</string>
    <string name="isfreedelivery">Update Postal Address to Free Delivery</string>
    <string name="nofreedelivery">Update Postal Address to Paid Delivery</string>
    <string name="crust">Crust</string>
    <string name="done">Done</string>
    <string name="complete">Complete</string>
    <string name="cash_drawer">Cash Box</string>
    <string name="addcreditCard">My Cards</string>
    <string name="swipelefttodelete">Swipe Left or Right to delete card</string>
    <string name="myCards">My Cards</string>
    <string name="AddnewCard">Add New Card</string>
    <string name="delete">DELETE</string>
    <string name="samplecardnumber">**** **** **** 0000</string>
    <string name="expirydate">Expiry Date</string>
    <string name="sampleDate">00/00</string>
    <string name="select_card">Select Card</string>
    <string name="cancel">Cancel</string>
    <string name="tipAmount">0.00</string>
    <string name="tipPercent">0.00</string>
    <string name="payplaceorder">Place Order</string>
    <string name="paidtitle">Paid</string>
    <string name="balancetitle">Balance</string>
    <string name="changePassword1">Change \nPassword</string>
    <string name="total_bill">Total Bill: $ 0.0</string>
    <string name="selectLocation">Select Location</string>
    <string name="locationText">We are serving in multiple locations. Please \n select location which is nearest to you</string>
    <string name="setToOutOfStock">Set to Out of Stock</string>
    <string name="setotInstock">Set to In Stock</string>
    <string name="onlinediscount">Online Discount</string>
    <string name="pickupdiscount">Pick-Up Discount</string>
    <string name="aggregatordiscount">Aggregator Discount</string>
    <string name="print">Print</string>
    <string name="back">&lt; Back </string>
    <string name="biometric">Finger Print</string>
    <string name="retry">Retry</string>
    <string name="kotprint">KOT Print</string>
    <string name="setPickUpOn">Available for Pick Up Only</string>
    <string name="setPickUpoff">Turn off Pick Up Only</string>
    <string name="setNewFlagOn">Show as New Product</string>
    <string name="setNewFlagoff">Hide as New Product</string>
    <string name="setOnetimeDealOn">Set as One Time Deal</string>
    <string name="setOnetimeDealoff">Turn off One Time Deal</string>
    <string name="addCustomer">New Customer</string>
    <string name="delivery2lines">Out For Delivery</string>
    <string name="orderready">Orders Ready</string>
    <string name="repeatorder">Order Again</string>
    <string name="add">Add</string>
    <string name="add_address">Add Address</string>
    <string name="add_customer">Create Customer</string>
    <string name="connect">Connect</string>
    <string name="cuttercmd">1D,56,42,00</string>
    <string name="cashboxcmd">1B,70,00,19,FA</string>
    <string name="copyright">Copyright © 2020 JettySoft. All rights reserved.</string>
    <string name="favorities">Favorities</string>
    <string name="applydiscount">Apply Discount</string>
    <string name="paid">Paid</string>
    <string name="full">Full</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="confirm">Confirm !</string>
    <string name="cnamehint">CNAME</string>
    <string name="settinventory">Received Inventory</string>
    <string name="pickdatetime">Pick a Time</string>
    <string name="asap">As Soon As Possible</string>
    <string name="gotoLocations">Go to location</string>
    <string name="injuriestohealth">Alcohol is Injurious to Health</string>
    <string name="searchLocations">Enter Your Location</string>
    <string name="orderLiquorText">Order Directly to your Home</string>
    <string name="google_maps_key">OjIqn0LI0Iqy0lVXYGi7R3HXdQw5+nBA6JD6ecTHLTOgCV10Yd/6yDW4L6wG+aZD</string>
    <string name="signupaccount">New Customer ? Sign-UP</string>
    <string name="verifyage">Verify Age by Date of Birth …!</string>
    <string name="consent">I wish to receive new offers and deals</string>
    <string name="assign">Assign</string>
    <string name="choose_addons">Choose AddOns</string>
    <string name="add_cap">ADD  +</string>
    <string name="guestlogin">Login As Guest</string>
    <string name="guestreg_title">Contact Information</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="choosedinein">Select Dine-In Table or Buffet</string>
    <string name="suretocleartable">Do you want to Reset Table ?</string>
    <string name="isorderpaid">Is Order Paid ?</string>
    <string name="selectAProduct">Search for Product</string>
    <string name="outOfStock">Out of Stock</string>
    <string name="null1">null</string>
    <string name="viewAll">View All</string>
    <string name="onetimedeal">One Time Deal</string>
    <string name="ip_amountused">Amount Used</string>
    <string name="ip_totalbalance">Total Balance</string>
    <string name="ip_transfers_title">Wallet Transfers</string>
    <string name="ip_transfers_now">Transfer Now</string>
    <string name="ip_amount_placeholder">$ 0.00</string>
</resources>