<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="80dp">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/ip_transfers_title"
        android:textColor="@color/textdarkgreycolor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="45dp"
        android:layout_height="6dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rectangle_below_titles"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <androidx.cardview.widget.CardView
        android:id="@+id/totalBalanceCard"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:maxWidth="350dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/total_balance"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ic_total_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_totalbalance" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_circle_shadow_39" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_circle_shadow_38" />

            <TextView
                android:id="@+id/total_balance_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ic_total_balance"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/ip_totalbalance"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/total_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_balance_txt"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/ip_amount_placeholder"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="You can transfer funds from your wallet balance to your family or friends wallet, they must have an account with us"
        android:textColor="@color/textdarkgreycolor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/totalBalanceCard"
        app:layout_constraintStart_toStartOf="@+id/totalBalanceCard"
        app:layout_constraintTop_toBottomOf="@+id/totalBalanceCard"
        tools:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView29"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29">

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:digits="0123456789"
            android:maxLength="10"
            android:inputType="number"
            android:gravity="left"
            android:imeOptions="actionNext"
            android:hint="Provide Phone Number to Transfer"
            android:textColor="@color/textdarkgreycolor"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout20"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout20"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout20">

        <EditText
            android:id="@+id/transferAmountTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:digits="0123456789."
            android:inputType="number"
            android:gravity="left"
            android:imeOptions="actionDone"
            android:hint="Enter Amount to Transfer ( 0.00 )"
            android:textColor="@color/textdarkgreycolor"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/transferNowButton"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="48dp"
        android:layout_weight="1"
        android:background="@color/pricegreen"
        android:text="@string/ip_transfers_now"
        android:textColor="@color/TextcolorforWhite"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>