<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/ip_amountused"
        android:textColor="@color/textdarkgreycolor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="45dp"
        android:layout_height="6dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rectangle_amount_used_titles"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <Button
        android:id="@+id/menuButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/solid_amount_used_color_round_button"
        android:text="@string/nav_menu"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="11dp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView21" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/amountTransRecylerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:background="@color/lightbluegray2"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/amountUsedCard"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/amount_used"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ic_payment_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_amountused" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_circle_shadow_39" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_circle_shadow_38" />

            <TextView
                android:id="@+id/amount_used_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/ic_payment_used"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/ip_amountused"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/amount_used_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/amount_used_txt"
                android:layout_marginStart="20dp"
                android:text="@string/ip_amount_placeholder"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/suggestionTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="You haven't made any transactions yet. Start making an order"
        android:textAlignment="center"
        android:textColor="@color/textdarkgreycolor"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/amountUsedCard"
        app:layout_constraintStart_toStartOf="@+id/amountUsedCard"
        app:layout_constraintTop_toBottomOf="@+id/amountUsedCard" />

    <Button
        android:id="@+id/menuSuggestionButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/solid_amount_used_color_round_button"
        android:text="@string/nav_menu"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/amountUsedCard"
        app:layout_constraintStart_toStartOf="@+id/amountUsedCard"
        app:layout_constraintTop_toBottomOf="@+id/suggestionTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>